namespace DataManagement.Entities;

public class Preferences
{
    public int TagId { get; set; }
    public int ProfileId { get; set; }
    public DateTime DateUpdated { get; set; }
}